[package]
name = "ackerman"
version = "0.1.2"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/Ackerman"
documentation = "https://docs.rs/Ackerman"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
qq-bot = {version = "0.1.0", path = "../ackerman-qqbot"}
futures-util = "0.3.27"
tokio = { version = "1.26.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
async-trait = "0.1.66"
serde = "1.0.156"
serde_json = "1.0.94"
dashmap = { version = "5.4.0", features = ["serde"] }
toml = "0.7.3"
base64 = "0.21.0"
rand = "0.8.5"

[dev-dependencies]

[features]
default = []
